# auto_check_config_project

./: .bash_history  .gitignore  .yamllint  ansible-navigator.yaml  connectivity_check.yml  flow.md  inventory  junos_change_ospf.yml  junos_check_ospf.yml  junos_noshutdown.yml  junos_ospf_bypass.yml  junos_shutdown.yml  junos_test.yml  junos_test_with_sleep.yml  pyproject.toml  role_vars_test.yml  test.yml
.github/workflows/: GA_commit_and_inspect  GA_commit_and_inspect.yaml  GA_commit_and_inspect.yml  GA_junos_change_ospf.yml  GA_junos_noshutdown.yml  GA_junos_ospf_bypass.yml  GA_junos_shutdown.yaml  GA_junos_shutdown.yml  github-actions-demo.yml  ospf.yml  ping_test.yml  quickstart.yml  using_container_test.yml  workflow_dispatch_test.yml
device/VMX01/: config
execution_environment/: execution-environment.yml
execution_environment/context/: Dockerfile
execution_environment/context/_build/: bindep.txt  requirements.txt
executionenvironment/: execution-environment.yml
executionenvironment/context/_build/: requirements.yml
project/config/vmx01/: config
project/inventory/: inventory.yaml
project/material/: operation.yaml
project/material/bypass/: expect.yaml
project/material/bypass_back/: expect.yaml
project/playbook/: commit_and_inspect.yaml  connectivity_check.yaml  connectivity_check.yml  test_show.yaml
project/playbook/roles/commit_config/tasks/: main.yaml
project/playbook/roles/inspect/tasks/: main.yaml
roles/change_metric/vars/: main.yml
roles/show_route/tasks/: main.yml
roles/show_route/vars/: main.yml
(+2 files in other folders)
