[tool.poetry]
name = "ansible-jvlab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ansible_jvlab"}]

[tool.poetry.dependencies]
python = "^3.9"
ansible-core = "<2.15.0"
ncclient = "^0.6.13"
ansible-builder = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
